dmall main degine end

--- a/dmall/index.html
+++ b/dmall/index.html
@@ -253,69 +253,72 @@
                     </ul>
                 </div>
                 <div class="main_promotion slider">
-                    <dl>
-                        <dt>
-                            <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
-                            <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>1</strong></span>
-                        </dt>
-                        <dd>
-                            <ul>
-                                <li class="cut_text">Home 인테리어</li>
-                                <li class="price"><strong>5000</strong>원</li>
-                            </ul>
-                        </dd>
-                    </dl>
-                    <dl>
-                        <dt>
-                            <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
-                            <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>1</strong></span>
-                        </dt>
-                        <dd>
-                            <ul>
-                                <li class="cut_text">Home 인테리어</li>
-                                <li class="price"><strong>5000</strong>원</li>
-                            </ul>
-                        </dd>
-                    </dl>
-                    <dl>
-                        <dt>
-                            <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
-                            <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>1</strong></span>
-                        </dt>
-                        <dd>
-                            <ul>
-                                <li class="cut_text">Home 인테리어</li>
-                                <li class="price"><strong>5000</strong>원</li>
-                            </ul>
-                        </dd>
-                    </dl>
-                    <dl>
-                        <dt>
-                            <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
-                            <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>1</strong></span>
-                        </dt>
-                        <dd>
-                            <ul>
-                                <li class="cut_text">Home 인테리어</li>
-                                <li class="price"><strong>5000</strong>원</li>
-                            </ul>
-                        </dd>
-                    </dl>
-                    <dl>
-                        <dt>
-                            <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
-                            <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>1</strong></span>
-                        </dt>
-                        <dd>
-                            <ul>
-                                <li class="cut_text">Home 인테리어</li>
-                                <li class="price"><strong>5000</strong>원</li>
-                            </ul>
-                        </dd>
-                    </dl>
-                    
+                    <span class="main_promotion front"> < </span>
+                    <div>
+                        <dl>
+                            <dt>
+                                <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
+                                <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>1</strong></span>
+                            </dt>
+                            <dd>
+                                <ul>
+                                    <li class="cut_text">Home 인테리어</li>
+                                    <li class="price"><strong>5000</strong>원</li>
+                                </ul>
+                            </dd>
+                        </dl>
+                        <dl>
+                            <dt>
+                                <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
+                                <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>2</strong></span>
+                            </dt>
+                            <dd>
+                                <ul>
+                                    <li class="cut_text">Home 인테리어</li>
+                                    <li class="price"><strong>5000</strong>원</li>
+                                </ul>
+                            </dd>
+                        </dl>
+                        <dl>
+                            <dt>
+                                <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
+                                <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>3</strong></span>
+                            </dt>
+                            <dd>
+                                <ul>
+                                    <li class="cut_text">Home 인테리어</li>
+                                    <li class="price"><strong>5000</strong>원</li>
+                                </ul>
+                            </dd>
+                        </dl>
+                        <dl>
+                            <dt>
+                                <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
+                                <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>4</strong></span>
+                            </dt>
+                            <dd>
+                                <ul>
+                                    <li class="cut_text">Home 인테리어</li>
+                                    <li class="price"><strong>5000</strong>원</li>
+                                </ul>
+                            </dd>
+                        </dl>
+                        <dl>
+                            <dt>
+                                <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
+                                <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>5</strong></span>
+                            </dt>
+                            <dd>
+                                <ul>
+                                    <li class="cut_text">Home 인테리어</li>
+                                    <li class="price"><strong>5000</strong>원</li>
+                                </ul>
+                            </dd>
+                        </dl>
+                        
+                    </div>
+                    <span class="main_promotion back"> > </span>
                 </div>
-
             </article>
         </div>
 
