--- a/dmall/shop/goods.html
+++ b/dmall/shop/goods.html
@@ -5,9 +5,9 @@
     <title>dmall에 방문해주셔서 감사합니다.</title>
     <link rel="stylesheet" href="../css/style_common.css">
     <link rel="stylesheet" href="../css/style_header.css">
-    <link rel="stylesheet" href="../css/style_main.css">
     <link rel="stylesheet" href="../css/style_aside.css">
     <link rel="stylesheet" href="../css/style_footer.css">
+    <link rel="stylesheet" href="../css/style_goods.css">
 </head>
 <body>
     <header>
@@ -147,7 +147,7 @@
                         <ul>
                             <li>
                                 <p class="goods_title">[Dmall] 벚꽃콘부케(3000)-1017110</p>
-                                <p>상품번호 : 0003098776</p>
+                                <p>상품번호 : <span>0003098776</span></p>
                             </li>
                             <li>
                                 <img src="/dmall/img/goods/title_right_01.jpg" alt="">
@@ -258,18 +258,177 @@
 
                     </div>
                 </div>
+
                 <div class="goods_minishop">
                     <article>
+                        <div class="goods_minishop line"></div>
+                        <div class="goods_minishop shop">
+                            <ul>
+                                <li>
+                                    <dl class="goods_minishop shop_first">
+                                        <dt>Dmall 가나다쇼핑</dt>
+                                        <dd>상품만족도 ♥♥♥♡♡ <span>22</span></dd>
+                                    </dl>
+                                    <dl class="goods_minishop shop_second">
+                                        <dt><img src="/dmall/img/goods/minishop_logo.gif" alt=""></dt>
+                                        <dd>판매상품수 <span>7,029</span> 개<br>
+                                            할인상품수 <span>3</span> 개</dd>
+                                    </dl>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="/dmall/img/btns/minishop_btn01.gif" alt=""></a>
+                                </li>
+                            </ul>
+                            <div class="goods_minishop slider">
+                                <div>
+                                    <a href="">
+                                        <dt>
+                                            <img src="/dmall/img/goods/goods_minishop_slider_01.gif" alt="">
+                                        </dt>
+                                        <dl>
+                                            <p>[Dmall] 멀티박스</p>
+                                            <p><strong> 1,000</strong>원</p>
+                                        </dl>
+                                    </a>
+                                    <a href="">
+                                        <dt>
+                                            <img src="/dmall/img/goods/goods_minishop_slider_02.gif" alt="">
+                                        </dt>
+                                        <dl>
+                                            <p>[Dmall] 멀티박스</p>
+                                            <p><strong> 1,000</strong>원</p>
+                                        </dl>
+                                    </a>
+                                    <a href="">
+                                        <dt>
+                                            <img src="/dmall/img/goods/goods_minishop_slider_03.gif" alt="">
+                                        </dt>
+                                        <dl>
+                                            <p>[Dmall] 멀티박스</p>
+                                            <p><strong> 1,000</strong>원</p>
+                                        </dl>
+                                    </a>
+                                    <a href="">
+                                        <dt>
+                                            <img src="/dmall/img/goods/goods_minishop_slider_04.gif" alt="">
+                                        </dt>
+                                        <dl>
+                                            <p>[Dmall] 멀티박스</p>
+                                            <p><strong> 1,000</strong>원</p>
+                                        </dl>
+                                    </a>
+                                    <a href="">
+                                        <dt>
+                                            <img src="/dmall/img/goods/goods_minishop_slider_05.gif" alt="">
+                                        </dt>
+                                        <dl>
+                                            <p>[Dmall] 멀티박스</p>
+                                            <p><strong> 1,000</strong>원</p>
+                                        </dl>
+                                    </a>
+                                </div>
+                                <div class="goods_minishop btns">
+                                    <ul>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                         
                     </article>
                 </div>
+
                 <div class="goods_detail">
                     <article>
-
+                        <div class="goods_detail tabs">
+                            <ul>
+                                <li>상품상세정보</li>
+                                <li>관련상품</li>
+                                <li>상품평</li>
+                                <li>질문과답변</li>
+                                <li>정책및공지</li>
+                            </ul>    
+                        </div>
+                        <div class="goods_detail wrap">
+                            <ul>
+                                <li><img src="/dmall/img/goods/goods_detail_01.jpg" alt=""></li>
+                                <li><img src="/dmall/img/goods/goods_detail_02.jpg" alt=""></li>
+                                <li><img src="/dmall/img/goods/goods_detail_03.jpg" alt=""></li>
+                                <li><img src="/dmall/img/goods/goods_detail_04.jpg" alt=""></li>
+                            </ul>
+                            <table>
+                                <tr>
+                                    <td>품명및모델명</td>
+                                    <td>20cm 후라이팬(불소코팅)</td>
+                                </tr>
+                                <tr>
+                                    <td>품명및모델명</td>
+                                    <td>20cm 후라이팬(불소코팅)</td>
+                                </tr>
+                                <tr>
+                                    <td>품명및모델명</td>
+                                    <td>20cm 후라이팬(불소코팅)</td>
+                                </tr>
+                                <tr>
+                                    <td>품명및모델명</td>
+                                    <td>20cm 후라이팬(불소코팅)</td>
+                                </tr>
+                                <tr>
+                                    <td>품명및모델명</td>
+                                    <td>20cm 후라이팬(불소코팅)</td>
+                                </tr>
+                                <tr>
+                                    <td>품명및모델명</td>
+                                    <td>20cm 후라이팬(불소코팅)</td>
+                                </tr>
+                                <tr>
+                                    <td>품명및모델명</td>
+                                    <td>20cm 후라이팬(불소코팅)</td>
+                                </tr>
+                                <tr>
+                                    <td>품명및모델명</td>
+                                    <td>20cm 후라이팬(불소코팅)</td>
+                                </tr>
+                                <tr>
+                                    <td>품명및모델명</td>
+                                    <td>20cm 후라이팬(불소코팅)</td>
+                                </tr>
+                                <tr>
+                                    <td>품명및모델명</td>
+                                    <td>20cm 후라이팬(불소코팅)</td>
+                                </tr>
+                            </table>
+                            <div class="goods_detail main"></div>
+                            <div class="goods_detail return"></div>
+                        </div>
+                        <div class="goods_detail related">
+                            <ul>
+                                <li><img src="/dmall/img/goods/goods_related_01.gif" alt=""><br>
+                                    [다이소] 20cm 후라이팬(불소코팅) - 56754</li>
+                                <li><img src="/dmall/img/goods/goods_related_01.gif" alt=""><br>
+                                    [다이소] 20cm 후라이팬(불소코팅) - 56754</li>
+                                <li><img src="/dmall/img/goods/goods_related_01.gif" alt=""><br>
+                                    [다이소] 20cm 후라이팬(불소코팅) - 56754</li>
+                                <li><img src="/dmall/img/goods/goods_related_01.gif" alt=""><br>
+                                    [다이소] 20cm 후라이팬(불소코팅) - 56754</li>
+                                <li><img src="/dmall/img/goods/goods_related_01.gif" alt=""><br>
+                                    [다이소] 20cm 후라이팬(불소코팅) - 56754</li>
+                                <li><img src="/dmall/img/goods/goods_related_01.gif" alt=""><br>
+                                    [다이소] 20cm 후라이팬(불소코팅) - 56754</li>
+                                <li><img src="/dmall/img/goods/goods_related_01.gif" alt=""><br>
+                                    [다이소] 20cm 후라이팬(불소코팅) - 56754</li>
+                            </ul>
+                        </div>              
+                        <div class="goods_detail reviews"></div>              
+                        <div class="goods_detail qna"></div>              
+                        <div class="goods_detail notice"></div>              
                     </article>
                 </div>
             </article>
         </div>
+
+        <div></div>
     </section>
 
     <footer>
