index, goods complited

--- a/dmall/index.html
+++ b/dmall/index.html
@@ -88,27 +88,27 @@
                 <li><a href="">최근본상품</a></li>
             </ul>
             <div class="wbr_slider">
-                <img src="/dmall/img/banner/wingBanner_right_slider_01.png" alt="">
+                <img src="./img/banner/wingBanner_right_slider_01.png" alt="">
                 <span><</span> 1 / 1 <span>></span>
             </div>
             <a href="">top</a>
             <h3>
-                <img src="/dmall/img/banner/wingBanner_right_01.png" alt="">
+                <img src="./img/banner/wingBanner_right_01.png" alt="">
             </h3>
         </div>
 
         <div class="wingBanner_left">
             <div class="wbl_slider">
-                <img src="/dmall/img/banner/wingBanner_left_slider_01.jpg" alt="">
+                <img src="./img/banner/wingBanner_left_slider_01.jpg" alt="">
             </div>
             <a href="">
-                <img src="/dmall/img/banner/wingBanner_left_01.jpg" alt="">
+                <img src="./img/banner/wingBanner_left_01.jpg" alt="">
             </a>
             <a href="">
-                <img src="/dmall/img/banner/wingBanner_left_02.png" alt="">
+                <img src="./img/banner/wingBanner_left_02.png" alt="">
                 파로마고객감사세일</a>
             <a href="">
-                <img src="/dmall/img/banner/wingBanner_left_03.png" alt="">
+                <img src="./img/banner/wingBanner_left_03.png" alt="">
                 쿠폰</a>
         </div>
     </aside>
@@ -118,7 +118,7 @@
             <canvas id="canvas"></canvas>
             <article>
                 <ul>
-                    <li><a href=""><img src="/dmall/img/banner/main_slider_01.jpg" alt=""></a></li>
+                    <li><a href=""><img src="./img/banner/main_slider_01.jpg" alt=""></a></li>
                 </ul>
                 <div class="main_slider_bottom">
                     <ul>
@@ -135,31 +135,31 @@
         <div class="sub_slider">
             <article>
                 <div class="sub_slider_left">
-                    <a href="#"><img src="/dmall/img/banner/sub_slider_left_01.jpg" alt=""></a>
+                    <a href="#"><img src="./img/banner/sub_slider_left_01.jpg" alt=""></a>
                 </div>
                 <div class="sub_slider_center">
-                    <a href="#"><img src="/dmall/img/banner/sub_slider_center_01.jpg" alt=""></a>
+                    <a href="#"><img src="./img/banner/sub_slider_center_01.jpg" alt=""></a>
                 </div>
                 <div class="sub_slider_right">
-                    <a href="#"><img src="/dmall/img/banner/sub_slider_right_01.jpg" alt=""></a>
+                    <a href="#"><img src="./img/banner/sub_slider_right_01.jpg" alt=""></a>
                 </div>
             </article>
         </div>
 
         <div class="line_banner_01">
             <article>
-                <a href=""><img src="/dmall/img/banner/line_banner_01.jpg" alt=""></a>
+                <a href=""><img src="./img/banner/line_banner_01.jpg" alt=""></a>
             </article>
         </div>
 
         <div class="main_deal">
             <article>
                 <dl>
-                    <dt><img src="/dmall/img/title_deal.png" alt=""></dt>
+                    <dt><img src="./img/title_deal.png" alt=""></dt>
                     <dd class="main_deal goods">
                         <dl>
                             <dt>
-                                <a href="#"><img src="/dmall/img/goods/deal_01.gif" alt=""></a>
+                                <a href="#"><img src="./img/goods/deal_01.gif" alt=""></a>
                             </dt>
                             <dd>
                                 <dl>
@@ -180,7 +180,7 @@
                         </dl>
                         <dl>
                             <dt>
-                                <a href="#"><img src="/dmall/img/goods/deal_01.gif" alt=""></a>
+                                <a href="#"><img src="./img/goods/deal_01.gif" alt=""></a>
                             </dt>
                             <dd>
                                 <dl>
@@ -201,7 +201,7 @@
                         </dl>
                         <dl>
                             <dt>
-                                <a href="#"><img src="/dmall/img/goods/deal_01.gif" alt=""></a>
+                                <a href="#"><img src="./img/goods/deal_01.gif" alt=""></a>
                             </dt>
                             <dd>
                                 <dl>
@@ -228,7 +228,7 @@
 
         <div class="line_banner_02">
             <article>
-                <a href=""><img src="/dmall/img/banner/line_banner_02.jpg" alt=""></a>
+                <a href=""><img src="./img/banner/line_banner_02.jpg" alt=""></a>
             </article>
         </div>
 
@@ -236,7 +236,7 @@
             <article>
                 <div>
                     <p>
-                        <a href=""><img src="/dmall/img/banner/main_promo_01.jpg" alt=""></a>
+                        <a href=""><img src="./img/banner/main_promo_01.jpg" alt=""></a>
                     </p>
                 </div>
                 <div class="main_promotion right">
@@ -257,8 +257,8 @@
                     <div>
                         <dl>
                             <dt>
-                                <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
-                                <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>1</strong></span>
+                                <a href=""><img src="./img/goods/main_promo_hit_01.gif" alt=""></a>
+                                <span><img src="./img/best_new_icon.png" alt=""><strong>1</strong></span>
                             </dt>
                             <dd>
                                 <ul>
@@ -269,8 +269,8 @@
                         </dl>
                         <dl>
                             <dt>
-                                <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
-                                <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>2</strong></span>
+                                <a href=""><img src="./img/goods/main_promo_hit_01.gif" alt=""></a>
+                                <span><img src="./img/best_new_icon.png" alt=""><strong>2</strong></span>
                             </dt>
                             <dd>
                                 <ul>
@@ -281,8 +281,8 @@
                         </dl>
                         <dl>
                             <dt>
-                                <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
-                                <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>3</strong></span>
+                                <a href=""><img src="./img/goods/main_promo_hit_01.gif" alt=""></a>
+                                <span><img src="./img/best_new_icon.png" alt=""><strong>3</strong></span>
                             </dt>
                             <dd>
                                 <ul>
@@ -293,8 +293,8 @@
                         </dl>
                         <dl>
                             <dt>
-                                <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
-                                <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>4</strong></span>
+                                <a href=""><img src="./img/goods/main_promo_hit_01.gif" alt=""></a>
+                                <span><img src="./img/best_new_icon.png" alt=""><strong>4</strong></span>
                             </dt>
                             <dd>
                                 <ul>
@@ -305,8 +305,8 @@
                         </dl>
                         <dl>
                             <dt>
-                                <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
-                                <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>5</strong></span>
+                                <a href=""><img src="./img/goods/main_promo_hit_01.gif" alt=""></a>
+                                <span><img src="./img/best_new_icon.png" alt=""><strong>5</strong></span>
                             </dt>
                             <dd>
                                 <ul>
@@ -324,13 +324,13 @@
 
         <div class="line_banner_03">
             <article>
-                <a href=""><img src="/dmall/img/banner/line_banner_03.jpg" alt=""></a>
+                <a href=""><img src="./img/banner/line_banner_03.jpg" alt=""></a>
             </article>
         </div>
 
         <div class="theme_banner">
             <article>
-                <img src="/dmall/img/title_theme.png" alt="">
+                <img src="./img/title_theme.png" alt="">
                 <div>
                     <a href=""></a>
                     <a href=""></a>
@@ -347,10 +347,10 @@
         <div class="main_bottom">
             <article>
                 <div class="main_bottom_left">
-                    <a href=""><img src="/dmall/img/banner/main_bottom_left.png" alt=""></a>
+                    <a href=""><img src="./img/banner/main_bottom_left.png" alt=""></a>
                 </div>
                 <div class="main_bottom_center">
-                    <a href=""><img src="/dmall/img/banner/main_bottom_center.png" alt=""></a>
+                    <a href=""><img src="./img/banner/main_bottom_center.png" alt=""></a>
                 </div>
                 <div class="main_bottom_right">
                     <ul>
@@ -363,7 +363,7 @@
                                 <dd>게시판내용</dd>
                             </dl>
                         </li>
-                        <li class="callcenter"><img src="/dmall/img/banner/callcenter.jpg" alt="고객센터 1688-5700"></li>
+                        <li class="callcenter"><img src="./img/banner/callcenter.jpg" alt="고객센터 1688-5700"></li>
                     </ul>
                 </div>
             </article>
