--- a/dmall/index.html
+++ b/dmall/index.html
@@ -14,10 +14,10 @@
         <div class="header_top">
             <article>
                 <ul>
-                    <li><a href=""><img src="./img/banner/header_top_1.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./img/banner/header_top_2.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./img/banner/header_top_3.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./img/banner/header_top_4.jpg" alt=""></a></li>
+                    <li><a href=""><img src="./img/banner/header_top_1.jpg" alt="올리빙스탠드옷걸이"></a></li>
+                    <li><a href=""><img src="./img/banner/header_top_2.jpg" alt="쓰레기비닐봉투"></a></li>
+                    <li><a href=""><img src="./img/banner/header_top_3.jpg" alt="벽걸이"></a></li>
+                    <li><a href=""><img src="./img/banner/header_top_4.jpg" alt="코털제거기"></a></li>
                 </ul>
             </article>
             <span class="header_top_close"></span>
@@ -27,7 +27,7 @@
                 <ul>
                     <li><a href="">로그인</a></li>
                     <li><a href="">회원가입</a></li>
-                    <li><a href="">나의쇼핑정보<img src="./img/btns/my_shopping.png" alt=""></a></li>
+                    <li><a href="">나의쇼핑정보<img src="./img/btns/my_shopping.png" alt="나의쇼핑정보"></a></li>
                     <li><a href="">장바구니</a></li>
                     <li><a href="">고객센터</a></li>
                 </ul>
@@ -36,7 +36,7 @@
         <div class="header_search">
             <article>
                 <div class="logo">
-                    <a href="#"><img src="img/shop_logo.gif" alt="LOGO"></a>
+                    <a href="./index.html"><img src="./img/shop_logo.gif" alt="LOGO"></a>
                 </div>
                 <div class="search">
                     <form action="#" name="search_form" method="GET">
@@ -118,7 +118,7 @@
             <canvas id="canvas"></canvas>
             <article>
                 <ul>
-                    <li><a href=""><img src="./img/banner/main_slider_01.jpg" alt=""></a></li>
+                    <li><a href=""><img src="./img/banner/main_slider_03.jpg" alt="파란들가구액추얼리"></a></li>
                 </ul>
                 <div class="main_slider_bottom">
                     <ul>
@@ -135,13 +135,13 @@
         <div class="sub_slider">
             <article>
                 <div class="sub_slider_left">
-                    <a href="#"><img src="./img/banner/sub_slider_left_01.jpg" alt=""></a>
+                    <a href="#"><img src="./img/banner/sub_slider_left_01.jpg" alt="대용량섬유향수"></a>
                 </div>
                 <div class="sub_slider_center">
-                    <a href="#"><img src="./img/banner/sub_slider_center_01.jpg" alt=""></a>
+                    <a href="#"><img src="./img/banner/sub_slider_center_01.jpg" alt="나이키후드맨투맨"></a>
                 </div>
                 <div class="sub_slider_right">
-                    <a href="#"><img src="./img/banner/sub_slider_right_01.jpg" alt=""></a>
+                    <a href="#"><img src="./img/banner/sub_slider_right_01.jpg" alt="새해맞이떡국"></a>
                 </div>
             </article>
         </div>
@@ -236,7 +236,7 @@
             <article>
                 <div>
                     <p>
-                        <a href=""><img src="./img/banner/main_promo_01.jpg" alt=""></a>
+                        <a href=""><img src="./img/banner/main_promo_01.jpg" alt="마법의청소박사"></a>
                     </p>
                 </div>
                 <div class="main_promotion right">
@@ -347,10 +347,10 @@
         <div class="main_bottom">
             <article>
                 <div class="main_bottom_left">
-                    <a href=""><img src="./img/banner/main_bottom_left.png" alt=""></a>
+                    <a href=""><img src="./img/banner/main_bottom_left.png" alt="금주의신상품"></a>
                 </div>
                 <div class="main_bottom_center">
-                    <a href=""><img src="./img/banner/main_bottom_center.png" alt=""></a>
+                    <a href=""><img src="./img/banner/main_bottom_center.png" alt="네트망활용법"></a>
                 </div>
                 <div class="main_bottom_right">
                     <ul>
