--- a/dmall/shop/goods.html
+++ b/dmall/shop/goods.html
@@ -14,10 +14,10 @@
         <div class="header_top">
             <article>
                 <ul>
-                    <li><a href=""><img src="../img/banner/header_top_1.jpg" alt=""></a></li>
-                    <li><a href=""><img src="../img/banner/header_top_2.jpg" alt=""></a></li>
-                    <li><a href=""><img src="../img/banner/header_top_3.jpg" alt=""></a></li>
-                    <li><a href=""><img src="../img/banner/header_top_4.jpg" alt=""></a></li>
+                    <li><a href=""><img src="../img/banner/header_top_1.jpg" alt="올리빙스탠드옷걸이"></a></li>
+                    <li><a href=""><img src="../img/banner/header_top_2.jpg" alt="쓰레기비닐봉투"></a></li>
+                    <li><a href=""><img src="../img/banner/header_top_3.jpg" alt="벽걸이"></a></li>
+                    <li><a href=""><img src="../img/banner/header_top_4.jpg" alt="코털제거기"></a></li>
                 </ul>
             </article>
             <span class="header_top_close"></span>
